fix some Refaster warnings.